--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "../node_module/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
