--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
     "angularfire2": "^5.2.1",
+    "bootstrap": "^4.3.1",
     "firebase": "^6.3.0",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.4.0",
